dev: show ordered data, minor improvement on UI

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,6 @@
 <div>{{title}}</div>
-<div *ngFor="let msg of messagesCount" >{{msg}}</div>
+<hr>
+<div>Total links: {{total}}</div>
+<ul *ngFor="let msg of messagesCount">
+  <li>({{msg.count}}) | {{msg.value}}</li>
+</ul>
